# A-Neuk-BE-AI

./: .env-example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  emotions.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/ai_cores/: __init__.py  chat_cores.py  diary_cores.py
app/ai_cores/chat_cores/: __init__.py  generate.py
app/ai_cores/diary_cores/: find_emotions.py  generate.py  split.py
app/ai_cores/diary_cores/test/: emotion_example_maker.py  emotion_labels.npy  emotion_test.py  emotions.txt  emotions_sample.txt  (+1 more)
app/ai_cores/remake_cores/: __init__.py  remake.py  remake_sentence.py
app/models/: diary_models.py  remake_models.py  test_item_models.py
app/routes/: chat.py  diary.py  remake.py  test.py
app/static/: index.css  index.html
src/: main.py
src/ai_cores/: __init__.py
src/ai_cores/chat_cores/: generate.py
src/ai_cores/diary_cores/: __init__.py  find_emotions.py  generate.py  split.py
src/ai_cores/remake_cores/: remake_sentence.py
src/config/: llm_config.py  llm_config.yaml
src/models/: chat_models.py  diary_models.py  remake_models.py
src/routes/: chat.py  diary.py  remake.py  test.py
src/utils/: emotion_sql_maker.py  emotions.txt  emotionsWithCategory.txt  insert_emotions.sql
src/utils/dictionary/: definition.py  emotion_words_with_meaning.txt
src/utils/example/: emotions.txt  example.py  output.txt
srcs/: auth.py
srcs/ai_cores/: chat_cores.py
srcs/models/: chat_models.py  diary_models.py
srcs/routes/: chat.py  root.py  test.py
