[project]
name = "a-neuk-be-ai"
version = "0.1.0"
description = "ANeuk AI - Emotional awareness and diary generation service with AI-powered emotion analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.2.6",
    "langchain-google-genai>=2.1.4",
    "langchain-community>=0.3.7",
    "langchain-text-splitters>=0.3.8",
    "openai>=1.54.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
